# Upload-Files-Sequential-Asynchronous-Requests

./: .gitignore
back-end/: Cargo.toml
back-end/src/: main.rs
front-end/: README.md  angular.json  package-lock.json  package.json
front-end/src/app/: app.component.html  app.component.ts
front-end/src/app/upload-file/: upload-file.component.html  upload-file.component.scss  upload-file.component.ts
