[package]
name = "upload-files-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-multipart = "0.6.1"
actix-http = "3.6.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.30"
actix-cors = "0.7.0"

